# Battle-Cats-Complete

./: .gitignore  Cargo.toml  README.md  build.rs  issue.txt
.github/workflows/: auto-release.yml  auto_release.yml  discord_release.yml  draft_release.yml  release.yml  sync_public.yml
src/: app.rs  definitions.rs  functions.rs  main.rs  patterns.rs  updater.rs
src/app/: events.rs  frame.rs  reload.rs  startup.rs
src/cat_data/: abilities.rs  list.rs  mod.rs  scanner.rs  sprites.rs  stats.rs
src/cat_data/cat/: block.rs  mod.rs  name.rs  utils.rs
src/core/: definitions.rs  mod.rs  patterns.rs  utils.rs
src/core/adb/: bridge.rs  driver.rs  mod.rs
src/core/addons/: manager.rs  mod.rs  toolpaths.rs
src/core/addons/adb/: bridge.rs  download.rs  driver.rs  mod.rs
src/core/addons/avifenc/: download.rs  encoding.rs
src/core/addons/ffmpeg/: download.rs  encoding.rs
src/core/addons/oem/: download.rs
src/core/anim/: animator.rs  bounds.rs  canvas.rs  center.rs  mod.rs  smooth.rs  transform.rs
src/core/anim/export/: encoding.rs  findloop.rs  leader.rs  process.rs  (+1 more)
src/core/cat/: abilities - core.rs  abilities.rs  loader.rs  mod.rs  scanner.rs  stats.rs  talents.rs  watcher.rs
src/core/files/: SkillAcquisition.rs  SkillLevel.rs  img015.rs  imgcut.rs  mod.rs  skillacquisition.rs  skilldescriptions.rs  skilllevel.rs  unitbuy.rs  unitevolve.rs  unitid.rs  unitlevel.rs
src/core/import/: decrypt.rs  export_data.rs  import_data.rs  log.rs  mod.rs  sort.rs  sort_data.rs
src/core/registries/: cat.rs
src/core/settings/: handle.rs  lang.rs  mod.rs
src/data/: mod.rs
src/data/cat/: mod.rs  skillacquisition.rs  skilldescriptions.rs  skilllevel.rs  unitbuy.rs  unitevolve.rs  unitexplanation.rs  unitid.rs  unitlevel.rs
src/data/global/: img015.rs  img022.rs  imgcut.rs  maanim.rs  mamodel.rs  mod.rs
src/features/: mod.rs
src/features/addons/: manager.rs
src/features/animation/: mod.rs
src/features/cat/: mod.rs  paths.rs  patterns.rs  registry.rs
src/features/data/: mod.rs  state.rs
src/features/enemy/: mod.rs  patterns.rs  registry.rs
src/features/home/: changelog.rs  notice.rs  view.rs
src/features/import/: mod.rs
src/features/mainmenu/: changelog.rs  view.rs
src/features/mods/: mod.rs
src/features/stage/: mod.rs  patterns.rs  registry.rs
src/global/: assets.rs  context.rs  img015.rs  img022.rs  mod.rs  resolver.rs  utils.rs
src/global/formats/: imgcut.rs  maanim.rs  mamodel.rs  mod.rs
src/global/game/: abilities.rs  img015.rs  img022.rs  mod.rs
src/global/io/: mod.rs  paths.rs  patterns.rs  watcher.rs
src/global/ui/: mod.rs
src/global_data/: img015.rs  img022.rs  mod.rs
src/import_data/: crypto.rs  game_data_pub.rs  mod.rs  mod_pub.rs  sort.rs
src/main_menu/: mod.rs
src/paths/: cat.rs  global.rs
src/settings/: lang.rs  mod.rs
src/settings/categories/: cat_data.rs  general.rs  mod.rs
src/ui/: mod.rs
src/ui/components/: anim_controls.rs  anim_viewer.rs  cat_list.rs  mod.rs  shared.rs
src/ui/main_menu/: changelog.rs  mod.rs  view.rs
src/ui/views/: mod.rs
(+217 files in other folders)
